@@ -6,6 +6,7 @@ Version 1.5.4+svn:
   * Editor2
     * Allow changing the display time of day from a preset list or to custom
 	  values via sliders, available in the new editor settings dialog.
+	* Added a feature to draw hex coordinates and/or terrain code on every hex
 
   * Language and translations
     * updated translations: Finnish, German, Lithuanian, Slovak, Valencian.
