@@ -93,6 +93,7 @@ enum HOTKEY_COMMAND {
 	HOTKEY_EDITOR_REFRESH, HOTKEY_EDITOR_UPDATE_TRANSITIONS,
 	HOTKEY_EDITOR_AUTO_UPDATE_TRANSITIONS,
 	HOTKEY_EDITOR_REFRESH_IMAGE_CACHE,
+	HOTKEY_EDITOR_DRAW_COORDINATES, HOTKEY_EDITOR_DRAW_TERRAIN_CODES,
 #endif
 
 	//misc.
